--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 #header {
   width: 100%;
   height: 100vh;
-  background-image: url(images/a3\ \(2\).png);
+  background-image: url(images/a3\ \(2\).PNG);
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -273,7 +273,7 @@ nav .fa-solid{
 }
 @media only screen and (max-width: 600px) {
   #header{
-    background-image: url(images/a3.png);
+    background-image: url(images/a3.PNG);
     padding-right: 10PX;
   }
   .header-text h1 {
